--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,10 @@ html {
 .legend {
   line-height: 18px;
   color: #555;
-  background-color: 'white' !important;
+  background-color: white;
+  border-radius: 10px;
+  width: 50px;
+  padding: 5px;
 }
 .legend i {
   width: 18px;
@@ -20,4 +23,7 @@ html {
   float: left;
   margin-right: 8px;
   opacity: 0.7;
+  text-align: center;
+  border-radius: 3px;
 }
+
